@@ -1,5 +1,5 @@
-MD5 c05cfe1c5034818cb8dc044ed8f4ed5b ChangeLog 452
+MD5 5f7db08e9eda3482dd35257a7ae72d8d ChangeLog 566
 MD5 ef347480a07e17202998133328952f01 ebook-binutils-2.10.1.ebuild 375
-MD5 91a3f0a1cd9728f631a0ddf8f6444304 ebook-binutils-2.13.90.0.4.ebuild 322
+MD5 1c39339c256b201d6356f65f6fc90c46 ebook-binutils-2.13.90.0.4.ebuild 328
 MD5 163c1733ef9116a681644f280ff89e53 files/digest-ebook-binutils-2.10.1 59
 MD5 359057a9b91ecefd929a814d27cf17c7 files/digest-ebook-binutils-2.13.90.0.4 68
