@@ -1,0 +1,10 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-doc/ebook-binutils/ebook-binutils-2.13.90.0.4.ebuild,v 1.1 2003/05/06 17:43:31 mholzer Exp $
+
+EBOOKNAME="binutils"
+EBOOKVERSION="2.13.90.0.4"
+EBOOKEXT="tgz"
+
+inherit ebook
+
