@@ -1,0 +1,5 @@
+MD5 95ad8d3e24e4871480cf5c59e1b23eba ChangeLog 362
+MD5 4fa16efec6918d1f20fa1b63a7867143 ebook-cvs-1.0.ebuild 295
+MD5 f886137c65e949685b833c27c42a9ba1 ebook-cvs-1.11.1.ebuild 300
+MD5 e60933794a655c7e5be30cfd2e0d861f files/digest-ebook-cvs-1.0 55
+MD5 95f76efed328697cbb56427a12aae1f9 files/digest-ebook-cvs-1.11.1 61
