@@ -2,9 +2,15 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.3 2002/05/07 03:58:19 drobbins Exp
 
+*ebook-cvs-1.11.1 (06 May 2003)
+
+  06 May 2003; Martin Holzer <mholzer@gentoo.org> ebook-cvs-1.11.1.ebuild:
+  Version bumped.
+
 *ebook-cvs-1.0 (09 May 2002)
 
+  06 May 2003; Martin Holzer <mholzer@gentoo.org>
+  digest update.
+
   09 May 2002; Francisco Gimeno <kikov@fco-gimeno.com> ebook-cvs-1.0 : 
-  
   Initial Release of the ebook to the devhelp tool.
-  
